--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="#">CareerConnect</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
+                  <li class="nav-item">
+            <a class="nav-link" href="{% url 'user_applications' %}">My Applications</a>
+          </li>
                     <li class="nav-item"><a class="nav-link" href="#">{{ user.username }}</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
