--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
                   <li class="nav-item">
             <a class="nav-link" href="{% url 'user_applications' %}">My Applications</a>
           </li>
+          <li class="nav-item"> 
+             <a class="nav-link" href="{% url 'applicant_dashboard' %}">Dashboard</a>
+          </li>
                     <li class="nav-item"><a class="nav-link" href="#">{{ user.username }}</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
